...
    <string name="start_again">Start Again!</string>
    <string name="forget_password">Forget Password</string>
    <string name="provide_your_username_for_which_you_want_to_reset_your_password">Provide your username for which you want to reset your password</string>
    <string name="next">NEXT</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password_q">Forget Password?</string>
    <string name="go">GO</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="sign_up">SIGN UP</string>
    <string name="ready_to_start">Ready to Start?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="share_your_score">Share Your Score</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="my_records">My Records:</string>
    <string name="_1">#1:</string>
    <string name="_3">#3:</string>
    <string name="_2">#2:</string>
    <string name="new_credentials">New Credentials</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified! Set your new password</string>
...
    <string name="login">LOGIN</string>
    <string name="single_mode">SINGLE MODE</string>
    <string name="mutiple_mode">MUTIPLE MODE</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No</string>
    <string name="register">REGISTER</string>
    <string name="select_control_way">Select control way:</string>
    <string name="voice_control">Voice Control</string>
    <string name="tapping">Tapping</string>
    <string name="select_your_bird_color">Select your bird color:</string>
    <string name="current_color">Current Color:</string>
    <string name="select_game_difficult_level">Select game Difficult Level:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="co_nde">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_code_sent_on_8615618219971">Enter one time code sent on +8615618219971</string>
    <string name="verify_code">Verify Code</string>
    <string-array name="bird_color">
        <item>Red</item>
...
