...
    android:paddingEnd="40dp"
    android:paddingTop="40dp"
    android:paddingBottom="20dp"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:src="@drawable/profile_icon" />

    <ImageView
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/voice_control_btn"
...
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:text="@string/voice_control" />

            <RadioButton
                android:id="@+id/tapping_btn"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tapping" />
        </RadioGroup>
    </LinearLayout>
...
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:text="@string/current_color"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/select_bird_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp" />
    </LinearLayout>

    <TextView
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/diff_level_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
...
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/medium_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/hard_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hard" />
        </RadioGroup>
    </LinearLayout>
...
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bungee"
        android:text="@string/ready_to_start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:elevation="0dp"
...
