...
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnFindUnpairedDevices"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btnDiscover"
                android:text="Discover" />

            <Button
                android:id="@+id/btnDiscoverable_on_off"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/btnFindUnpairedDevices"
                android:onClick="btnEnableDisable_Discoverable"
                android:text="Enable Discoverable" />

            <Button
                android:id="@+id/btnONOFF"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
...
            android:fontFamily="@font/muli"
            android:text="Paired devices"
            android:textColor="#000"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/paired_devices_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnStartConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#000"
            android:text="Connect device"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
...
